[package]
name = "celix"
version = "0.1.0"
authors = ["Rogier Velting <rogiervelting@gmail.com>"]
build = "build.rs"

[dependencies]
zip = { version = "0.1.16", default-features = false }
rustc-serialize = "0.3"
toml = "0.1"

[build-dependencies]
bindgen = { git = "https://github.com/crabtw/rust-bindgen.git" }
cmacros = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargo-celix"
path = "src/main.rs"
