[package]
name = "celix"
version = "0.3.1"
authors = ["Rogier Velting <rogiervelting@gmail.com>"]

[dependencies.toml]
version = "0.1"
default-features = false
optional = true

[dependencies.getopts]
version = "0.2.14"
optional = true

[features]
default = ["toml","getopts"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargo-celix"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
